More work done on the setup process. * Created a generic client-side form handler (which needs work) * Created a site info form partial to allow for updating the site info during setup * Removed the language object from the config object to make saving of the config easier. Probably should have the site info in the db, which should be setup first.

--- a/app/views/admin/new-user.ejs
+++ b/app/views/admin/new-user.ejs
@@ -11,7 +11,7 @@
 			<input type="password" name="repwd" id="repwd" value="{{=attempt('repassword')}}">
 		</div>
 		<div class="buttons">
-			<input type="submit" name="primary" id="new-user-submit" value="{{=content.button.submit}}">
+			<input type="submit" name="primary" id="new-user-submit" value="{{-content.button.submit}}">
 		</div>
 	</fieldset>
 </form>
