--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -48,6 +48,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/js/jquery.form.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/js/jquery.simplemodal.1.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/assets/js/forms.js" type="text/javascript" charset="utf-8"></script>
 	{{- scripts.get() }}
 </body>
 </html>
