--- a/app/public/assets/style/default.css
+++ b/app/public/assets/style/default.css
@@ -50,6 +50,31 @@ h1 {
 	box-shadow: 0px 0px 5px 2px #aaa;
 }
 
+/* FORMS ----------------------------------------------- */
+
+form {
+	
+}
+
+form fieldset {
+	
+}
+
+fieldset label {
+	display: block;
+	margin-top: 10px;
+	font-size: 14pt;
+}
+
+input[type=submit] {
+	margin: 7px 0 0;
+}
+
+input[type=text],input[type=password] {
+	font-size: 16pt;
+	padding: 6px;
+}
+
 #simplemodal-overlay {
 	background-color:#000;
 }
