More updates to the setup process. Still a work in progress.

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -45,7 +45,8 @@
 			</fieldset>
 		</form>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
+	<script src="/assets/js/jquery-1.5.2.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/js/jquery.form.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/js/ICanHaz.js" type="text/javascript" charset="utf-8"></script>
 	<script src="/assets/js/jquery.simplemodal.1.4.1.min.js" type="text/javascript" charset="utf-8"></script>
